--- a/package.json
+++ b/package.json
@@ -5,27 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vueuse/core": "^10.7.0",
-    "gsap": "^3.12.4",
     "pinia": "^2.1.7",
-    "sass": "^1.69.5",
-    "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@types/node": "^22.13.14",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@vue/tsconfig": "^0.7.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "vite-plugin-node-polyfills": "^0.23.0",
-    "vue-tsc": "^1.8.25"
-  },
-  "engines": {
-    "node": ">=16.0.0"
+    "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.69.5",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vue-tsc": "^1.8.5"
   }
 }
