--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "type-check": "vue-tsc --noEmit"
+    "preview": "vite preview"
   },
   "dependencies": {
     "pinia": "^2.1.7",
